<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/doneAction"
        android:title="@string/done"
        app:showAsAction="never"/>

    <item
        android:id="@+id/undoneAction"
        android:title="@string/undone"
        app:showAsAction="never"/>

    <item
        android:id="@+id/editAction"
        android:title="@string/edit"
        app:showAsAction="never"/>

    <item
        android:id="@+id/copyAction"
        android:title="@string/copy"
        app:showAsAction="never"/>

    <item
        android:id="@+id/shareAction"
        android:title="@string/share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/deleteAction"
        android:title="@string/delete"
        app:showAsAction="never"/>

</menu>