<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="@dimen/dialog_repeat_picker_margin_left_and_right"
        android:layout_marginRight="@dimen/dialog_repeat_picker_margin_left_and_right"

        android:maxWidth="@dimen/dialog_repeat_picker_max_width">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/repeat"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black"

                android:textStyle="bold"

                android:layout_margin="@dimen/dialog_repeat_picker_title_margin" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/once"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"

                    android:paddingStart="@dimen/dialog_repeat_radio_button_padding"
                    android:paddingLeft="@dimen/dialog_repeat_radio_button_padding"
                    android:paddingRight="0dp"
                    android:paddingEnd="0dp"

                    android:layout_marginTop="@dimen/dialog_repeat_radio_button_margin"
                    android:layout_marginLeft="@dimen/dialog_repeat_radio_button_margin"
                    android:layout_marginRight="@dimen/dialog_repeat_radio_button_margin"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/hourly"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"

                    android:paddingStart="@dimen/dialog_repeat_radio_button_padding"
                    android:paddingLeft="@dimen/dialog_repeat_radio_button_padding"
                    android:paddingRight="0dp"
                    android:paddingEnd="0dp"

                    android:layout_marginTop="@dimen/dialog_repeat_radio_button_margin"
                    android:layout_marginLeft="@dimen/dialog_repeat_radio_button_margin"
                    android:layout_marginRight="@dimen/dialog_repeat_radio_button_margin"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/daily"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"

                    android:paddingStart="@dimen/dialog_repeat_radio_button_padding"
                    android:paddingLeft="@dimen/dialog_repeat_radio_button_padding"
                    android:paddingRight="0dp"
                    android:paddingEnd="0dp"

                    android:layout_marginTop="@dimen/dialog_repeat_radio_button_margin"
                    android:layout_marginLeft="@dimen/dialog_repeat_radio_button_margin"
                    android:layout_marginRight="@dimen/dialog_repeat_radio_button_margin"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/weekly"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"

                    android:paddingStart="@dimen/dialog_repeat_radio_button_padding"
                    android:paddingLeft="@dimen/dialog_repeat_radio_button_padding"
                    android:paddingRight="0dp"
                    android:paddingEnd="0dp"

                    android:layout_marginTop="@dimen/dialog_repeat_radio_button_margin"
                    android:layout_marginLeft="@dimen/dialog_repeat_radio_button_margin"
                    android:layout_marginRight="@dimen/dialog_repeat_radio_button_margin"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/monthly"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"

                    android:paddingStart="@dimen/dialog_repeat_radio_button_padding"
                    android:paddingLeft="@dimen/dialog_repeat_radio_button_padding"
                    android:paddingRight="0dp"
                    android:paddingEnd="0dp"

                    android:layout_marginTop="@dimen/dialog_repeat_radio_button_margin"
                    android:layout_marginLeft="@dimen/dialog_repeat_radio_button_margin"
                    android:layout_marginRight="@dimen/dialog_repeat_radio_button_margin"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/yearly"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"

                    android:paddingStart="@dimen/dialog_repeat_radio_button_padding"
                    android:paddingLeft="@dimen/dialog_repeat_radio_button_padding"
                    android:paddingRight="0dp"
                    android:paddingEnd="0dp"

                    android:layout_marginTop="@dimen/dialog_repeat_radio_button_margin"
                    android:layout_marginLeft="@dimen/dialog_repeat_radio_button_margin"
                    android:layout_marginRight="@dimen/dialog_repeat_radio_button_margin"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:layout_marginTop="@dimen/dialog_repeat_linear_layout_margin"
                android:layout_marginBottom="@dimen/dialog_repeat_linear_layout_margin">

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/one_dp"/>

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"

                    android:text="@string/cancel"

                    android:background="@android:color/transparent"

                    android:foreground="?selectableItemBackground"/>

                <Button
                    android:id="@+id/okButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"

                    android:text="@string/ok"

                    android:background="@android:color/transparent"

                    android:foreground="?selectableItemBackground"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>