<?xml version="1.0" encoding="utf-8"?>
<!--
==> Notes

1- the fragment inside the viewpager might contain fab, and
I might use snackBar, that's why coordinator layout is better.
-->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="android.mohamedalaa.com.vipreminder.view.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="?colorPrimary"

            app:elevation="@dimen/app_bar_layout_elevation">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"

                app:contentInsetStart="@dimen/toolbar_inset_start"

                app:title="@string/dashboard"
                app:titleTextColor="@android:color/white"/>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:tabSelectedTextColor="@android:color/white"
                app:tabTextColor="@color/almost_white_is_grey_300"

                app:tabGravity="fill"
                app:tabMode="fixed">

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:text="@string/upcoming"/>

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:text="@string/favourite"/>

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:text="@string/history"/>

            </android.support.design.widget.TabLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"

            app:layout_behavior="@string/appbar_scrolling_view_behavior" >

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </android.support.v4.widget.NestedScrollView>

        <!-- to access this view for change in visibility use the view model -->
        <FrameLayout
            android:id="@+id/loadingFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@color/lightBlueColorPrimaryVeryVeryLight"

            android:visibility="visible"

            app:layout_behavior="@string/appbar_scrolling_view_behavior" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"/>

        </FrameLayout>

    </android.support.design.widget.CoordinatorLayout>

</layout>