<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/lightBlueColorPrimaryVeryVeryLight">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginBottom="@dimen/powered_by_google_area_height"/>

        <LinearLayout
            android:id="@+id/emptyViewLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:gravity="center"

            android:background="@color/lightBlueColorPrimaryVeryVeryLight"

            android:visibility="gone">

            <ImageView
                android:id="@+id/imageViewInEmptyView"
                android:layout_width="@dimen/image_view_height_and_width_in_empty_view"
                android:layout_height="@dimen/image_view_height_and_width_in_empty_view"

                android:src="@drawable/ic_event_note_24px"

                android:contentDescription="@string/empty_view"/>

            <TextView
                android:id="@+id/titleTextViewInEmptyView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black"

                android:layout_margin="@dimen/title_empty_view_margin"

                android:layout_gravity="center"
                android:gravity="center"

                android:text="@string/no_tasks_found_here"/>

            <TextView
                android:id="@+id/subTitleTextViewInEmptyView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/almost_black_is_grey_800"

                android:layout_gravity="center"
                android:gravity="center"

                android:text="@string/add_tasks_from_the_below_button"/>

        </LinearLayout>

        <!-- No need to add elevation to fab as it already done auto -->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_add_white_24px"

            android:layout_gravity="end|bottom"

            android:layout_marginRight="@dimen/fragment_viewpager_fab_margin"
            android:layout_marginEnd="@dimen/fragment_viewpager_fab_margin"
            android:layout_marginBottom="@dimen/fragment_viewpager_fab_margin"/>

        <!--
        Padding right made to ensure no intersection
        between below view and the fab
        and fab position is here since if it was above this linearLayout
        it would make problem with items in recyclerView,
        especially the last item favourite click would be
        impossible to be reached
        -->
        <LinearLayout
            android:id="@+id/poweredByGoogleLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/powered_by_google_area_height"

            android:layout_gravity="bottom"

            android:orientation="vertical"

            tools:ignore="UseCompoundDrawables"

            android:background="@color/lightBlueColorPrimaryVeryLight"

            android:paddingRight="@dimen/powered_by_google_area_padding_end"
            android:paddingEnd="@dimen/powered_by_google_area_padding_end"
            android:paddingLeft="0dp"
            android:paddingStart="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/powered_by_google_image_padding_top"
                android:src="@drawable/powered_by_google_light"

                android:contentDescription="@string/powered_by_google"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autoLink="web"
                android:gravity="center"
                android:paddingBottom="@dimen/powered_by_google_privacy_text_padding_bottom"
                android:text="@string/privacy"
                android:textAlignment="center" />

        </LinearLayout>

    </FrameLayout>

</layout>